# Compilers-ZENITH

./: .gitignore  CMakeLists.txt  Makefile  README.md  ast.txt  ast_after_optimization.txt  ast_before_optimization.txt  compile.sh  errors.txt  generated_code.bc  generated_code.ll  input.txt  input2.txt  input_for.txt  ir_generator.cpp  llvm_code.txt  main  main-debug  main.cpp  my_program  output.json  print_functions.c  replit.nix  run.sh  syntax_analyzer.cpp  type_checker.cpp
.ccls-cache/@@home@runner@Lexer-construction/: @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@algorithm.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@array.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@auto_ptr.h.blob  @nix@store@14c6s4xzhy14i2b05s00rjns2j93gzz4-gcc-13.2.0@include@c++@13.2.0@backward@binders.h.blob  (+285 more)
logs/: ir_generator.txt
nodes/: array_type.h  assignment.h  body.h  body_declaration.h  expression.h  factor.h  field_access_expression.h  field_assignment.h  for_loop.h  identifier.h  if_statement.h  literal_expression.h  literal_primary.h  modifiable_primary.h  node.h  parameter_declaration.h  parametrs.h  primary.h  primitive_type.h  print.h  program.h  range.h  range_statment.h  record_expression.h  record_type.h  relation.h  return_type.h  routine_call.h  routine_declaration.h  simple.h  simple_declaration.h  statement.h  summand.h  type.h  type_declaration.h  user_type.h  variable_declaration.h  while_loop.h
tokens/enums/: token_type.h
utility/: utils.cpp
(+310 files in other folders)
